--- a/src/Roughcut.Atlassian.Mvc.Web/appsettings.Development.json
+++ b/src/Roughcut.Atlassian.Mvc.Web/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JiraApiSettings": {
+    "PublicSharedSecretForTesting": "Used-For-Secrets-Testing",
+    "JiraBaseUrl": "https://jira-cloud-demo.atlassian.net/rest/api/2",
+    "JiraLoginUserName": "jiraapi.svcaccount@example.com",
+    "JiraApiAccessKeyId": "CREATE-GET-THIS-VALUE-FROM-TARGET-JIRA-INSTANCE",
+    "JiraDbConnString": "Data Source=MS-SQL-INSTANCE-GOES-HERE;Initial Catalog=WIP-FEATURE-DB-NAME;Persist Security Info=True;User ID=SomeLoginIdForJiraDb;Password=SHOULD-BE-REALLY-STRONG;MultipleActiveResultSets=True;TrustServerCertificate=True;App=YOUR-JiraApi-Integration-AppName"
+
   }
 }
